// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsAddChecklistItemDialog > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="Type"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <!--v-if-->
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly if type is SELECTION and multipleSelection is false 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="SINGLE_SELECT"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="selection task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-button-stub
                class="mb-2"
                color="quaternary-dark"
                data-v-ef61f2fa=""
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Description"
                textclass=""
                type="primary"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <div
                class=""
                data-v-9a7bef0e=""
                data-v-ef61f2fa=""
              >
                <div
                  class="grabbable"
                  data-draggable="true"
                  data-v-9a7bef0e=""
                >
                  
                  <div
                    class="d-flex mb-2"
                    data-v-ef61f2fa=""
                  >
                    <v-hover-stub
                      data-v-ef61f2fa=""
                      disabled="false"
                    >
                      <span
                        class="handle"
                        data-v-ef61f2fa=""
                      >
                        <div
                          class="number-container"
                          data-v-ef61f2fa=""
                        >
                          <ordering-number-stub
                            data-v-ef61f2fa=""
                            number="1"
                            outlined="false"
                            small="false"
                          />
                        </div>
                      </span>
                    </v-hover-stub>
                    <evocon-v-input-stub
                      class="mx-2"
                      data-v-ef61f2fa=""
                      filled="true"
                      grow="false"
                      hint="Option"
                      maxlength="200"
                      modelvalue="selection 1"
                      rules="(val) => !!val || _ctx.$t('Option')"
                      truncateinput="false"
                      type="text"
                      usechip="false"
                    />
                    <evocon-v-button-stub
                      class="mt-2"
                      color=""
                      data-v-ef61f2fa=""
                      disabled="false"
                      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      iconcolor=""
                      text=""
                      textclass=""
                      type="primary"
                    />
                  </div>
                  
                </div>
                <div
                  class="grabbable"
                  data-draggable="true"
                  data-v-9a7bef0e=""
                >
                  
                  <div
                    class="d-flex mb-2"
                    data-v-ef61f2fa=""
                  >
                    <v-hover-stub
                      data-v-ef61f2fa=""
                      disabled="false"
                    >
                      <span
                        class="handle"
                        data-v-ef61f2fa=""
                      >
                        <div
                          class="number-container"
                          data-v-ef61f2fa=""
                        >
                          <ordering-number-stub
                            data-v-ef61f2fa=""
                            number="2"
                            outlined="false"
                            small="false"
                          />
                        </div>
                      </span>
                    </v-hover-stub>
                    <evocon-v-input-stub
                      class="mx-2"
                      data-v-ef61f2fa=""
                      filled="true"
                      grow="false"
                      hint="Option"
                      maxlength="200"
                      modelvalue="selection 2"
                      rules="(val) => !!val || _ctx.$t('Option')"
                      truncateinput="false"
                      type="text"
                      usechip="false"
                    />
                    <evocon-v-button-stub
                      class="mt-2"
                      color=""
                      data-v-ef61f2fa=""
                      disabled="false"
                      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      iconcolor=""
                      text=""
                      textclass=""
                      type="primary"
                    />
                  </div>
                  
                </div>
              </div>
              <evocon-v-button-stub
                class="ml-8"
                color=""
                data-v-ef61f2fa=""
                disabled="false"
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Option"
                textclass=""
                type="primary-light"
              />
              <span
                class="ml-4 text-body-small text-secondary-dark"
                data-v-ef61f2fa=""
              >
                Maximum: 30
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly if type is SELECTION and multipleSelection is true 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="MULTI_SELECT"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="multi selection task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-button-stub
                class="mb-2"
                color="quaternary-dark"
                data-v-ef61f2fa=""
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Description"
                textclass=""
                type="primary"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <div
                class=""
                data-v-9a7bef0e=""
                data-v-ef61f2fa=""
              >
                <div
                  class="grabbable"
                  data-draggable="true"
                  data-v-9a7bef0e=""
                >
                  
                  <div
                    class="d-flex mb-2"
                    data-v-ef61f2fa=""
                  >
                    <v-hover-stub
                      data-v-ef61f2fa=""
                      disabled="false"
                    >
                      <span
                        class="handle"
                        data-v-ef61f2fa=""
                      >
                        <div
                          class="number-container"
                          data-v-ef61f2fa=""
                        >
                          <ordering-number-stub
                            data-v-ef61f2fa=""
                            number="1"
                            outlined="false"
                            small="false"
                          />
                        </div>
                      </span>
                    </v-hover-stub>
                    <evocon-v-input-stub
                      class="mx-2"
                      data-v-ef61f2fa=""
                      filled="true"
                      grow="false"
                      hint="Option"
                      maxlength="200"
                      modelvalue="selection 1"
                      rules="(val) => !!val || _ctx.$t('Option')"
                      truncateinput="false"
                      type="text"
                      usechip="false"
                    />
                    <evocon-v-button-stub
                      class="mt-2"
                      color=""
                      data-v-ef61f2fa=""
                      disabled="false"
                      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      iconcolor=""
                      text=""
                      textclass=""
                      type="primary"
                    />
                  </div>
                  
                </div>
                <div
                  class="grabbable"
                  data-draggable="true"
                  data-v-9a7bef0e=""
                >
                  
                  <div
                    class="d-flex mb-2"
                    data-v-ef61f2fa=""
                  >
                    <v-hover-stub
                      data-v-ef61f2fa=""
                      disabled="false"
                    >
                      <span
                        class="handle"
                        data-v-ef61f2fa=""
                      >
                        <div
                          class="number-container"
                          data-v-ef61f2fa=""
                        >
                          <ordering-number-stub
                            data-v-ef61f2fa=""
                            number="2"
                            outlined="false"
                            small="false"
                          />
                        </div>
                      </span>
                    </v-hover-stub>
                    <evocon-v-input-stub
                      class="mx-2"
                      data-v-ef61f2fa=""
                      filled="true"
                      grow="false"
                      hint="Option"
                      maxlength="200"
                      modelvalue="selection 2"
                      rules="(val) => !!val || _ctx.$t('Option')"
                      truncateinput="false"
                      type="text"
                      usechip="false"
                    />
                    <evocon-v-button-stub
                      class="mt-2"
                      color=""
                      data-v-ef61f2fa=""
                      disabled="false"
                      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      iconcolor=""
                      text=""
                      textclass=""
                      type="primary"
                    />
                  </div>
                  
                </div>
              </div>
              <evocon-v-button-stub
                class="ml-8"
                color=""
                data-v-ef61f2fa=""
                disabled="false"
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Option"
                textclass=""
                type="primary-light"
              />
              <span
                class="ml-4 text-body-small text-secondary-dark"
                data-v-ef61f2fa=""
              >
                Maximum: 30
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly, if type is CHECK 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="CHECK"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="check task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-textarea-stub
                data-v-ef61f2fa=""
                hint="Description (Optional)"
                maxlength="500"
                modelmodifiers="[object Object]"
                modelvalue="do a, b and c"
                no-resize=""
                placeholder="Description"
                validate-on-blur=""
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly, if type is MEASUREMENT 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="MEASUREMENT"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be measured?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="measurement task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-textarea-stub
                data-v-ef61f2fa=""
                hint="Description (Optional)"
                maxlength="500"
                modelmodifiers="[object Object]"
                modelvalue="do x, y and z"
                no-resize=""
                placeholder="Description"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-unit-column"
              lg="false"
              md="4"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="E.g. pcs, kg, litre"
                id="check-unit"
                maxlength="10"
                modelmodifiers="[object Object]"
                modelvalue="unit"
                placeholder="Unit"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-min-val-column"
              lg="false"
              md="4"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="true"
                data-v-ef61f2fa=""
                grow="false"
                hint="Minimum value"
                id="check-min-val"
                maxvalue="999999999999999"
                modelvalue="10"
                placeholder="Min"
                required=""
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-max-val-column"
              lg="false"
              md="4"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="true"
                data-v-ef61f2fa=""
                grow="false"
                hint="Maximum value"
                id="check-max-val"
                maxvalue="999999999999999"
                modelvalue="100"
                placeholder="Max"
                required=""
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-warning-message-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="Message to operators when measurement is out of range (optional)"
                id="check-warning-message"
                maxlength="200"
                modelvalue=""
                placeholder="Message"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can add multiple measurements"
                maintext="Allow multiple sample entries"
                samelineinput="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly, if type is TEXT 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="TEXT"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="text task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-button-stub
                class="mb-2"
                color="quaternary-dark"
                data-v-ef61f2fa=""
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Description"
                textclass=""
                type="primary"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly, if type is YES_NO 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="YES_NO"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="yes/no task"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-button-stub
                class="mb-2"
                color="quaternary-dark"
                data-v-ef61f2fa=""
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Description"
                textclass=""
                type="primary"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-warning-message-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="Message to operators when the answer is No (optional)"
                id="check-warning-message"
                maxlength="200"
                modelvalue=""
                placeholder="Message"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can add multiple answers"
                maintext="Allow multiple sample entries"
                samelineinput="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddChecklistItemDialog > renders correctly, if type is YES_NO with warningMessage 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Task"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-ef61f2fa=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-ef61f2fa=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-type-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-ef61f2fa=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                iconkey="icon"
                id="check-type-select"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                item-title="name"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="YES_NO"
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                rules="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-name-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="What has to be checked?"
                id="check-name"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="yes/no task with message"
                placeholder="Task"
                required=""
                rules="true"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on-blur=""
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-button-stub
                class="mb-2"
                color="quaternary-dark"
                data-v-ef61f2fa=""
                icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                iconcolor=""
                text="Description"
                textclass=""
                type="primary"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              id="check-warning-message-column"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                data-v-ef61f2fa=""
                filled="true"
                grow="false"
                hint="Message to operators when the answer is No (optional)"
                id="check-warning-message"
                maxlength="200"
                modelvalue="Contact supervisor when No is selected"
                placeholder="Message"
                truncateinput="false"
                type="text"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <v-col-stub
              class="px-1 mt-4"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can mark this task as not applicable."
                id="not-applicable-switch"
                maintext="Allow "not applicable" as an option"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 my-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext=""
                maintext="Allow adding images"
                samelineinput="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-ef61f2fa=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <multi-line-switch-stub
                data-v-ef61f2fa=""
                disabled="false"
                helptext="When enabled, operators can add multiple answers"
                maintext="Allow multiple sample entries"
                samelineinput="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-ef61f2fa=""
        id="delete-button"
      />
      <evocon-v-tooltip-wrap-stub
        data-v-ef61f2fa=""
        location="top"
        opendelay="500"
        text="Duplicate"
      />
      <v-spacer-stub
        data-v-ef61f2fa=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-ef61f2fa=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
